// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should not render with invalid styles when also passed the disabled prop 1`] = `
.circuit-6 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  color: #212933;
  padding: 8px 32px 8px 12px;
  max-height: 42px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 16px;
  line-height: 24px;
}

.circuit-0:focus,
.circuit-0:hover,
.circuit-0:active {
  outline: none;
}

.circuit-0:focus {
  border-color: #3388FF;
}

.circuit-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-2 {
  color: #5C656F;
  display: block;
  z-index: 40;
  pointer-events: none;
  position: absolute;
  height: 24px;
  width: 24px;
  top: 1px;
  right: 1px;
  margin: 8px;
}

.circuit-4 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

label > .circuit-4,
label + .circuit-4 {
  margin-top: 4px;
}

<label
  class="circuit-6 circuit-7"
  for="select_4"
>
  <div
    class="circuit-4 circuit-5"
    disabled=""
  >
    <select
      class="circuit-0 circuit-1"
      disabled=""
      id="select_4"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-2 circuit-3"
      fill="none"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 9l3-3 3 3m-6 6l3 3 3-3"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
</label>
`;

exports[`Select should render with a prefix when passed the prefix prop 1`] = `
.circuit-7 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-5 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-5,
label + .circuit-5 {
  margin-top: 4px;
}

.circuit-3 {
  color: #5C656F;
  display: block;
  z-index: 40;
  pointer-events: none;
  position: absolute;
  height: 24px;
  width: 24px;
  top: 1px;
  right: 1px;
  margin: 8px;
}

.circuit-0 {
  display: block;
  position: absolute;
  top: 1px;
  left: 1px;
  z-index: 40;
  height: 16px;
  width: 16px;
  margin: 12px;
  pointer-events: none;
}

.circuit-1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  color: #212933;
  padding: 8px 32px 8px 12px;
  max-height: 42px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 16px;
  line-height: 24px;
  padding-left: calc( 12px + 16px + 12px );
}

.circuit-1:focus,
.circuit-1:hover,
.circuit-1:active {
  outline: none;
}

.circuit-1:focus {
  border-color: #3388FF;
}

.circuit-1:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

<label
  class="circuit-7 circuit-8"
  for="select_8"
>
  <div
    class="circuit-5 circuit-6"
  >
    <div
      class="circuit-0"
      style="width: 24px; height: 24px;"
    />
    <select
      class="circuit-1 circuit-2"
      id="select_8"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-3 circuit-4"
      fill="none"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 9l3-3 3 3m-6 6l3 3 3-3"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
</label>
`;

exports[`Select should render with a tooltip when passed a validation hint 1`] = `
.circuit-8 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-6 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-6,
label + .circuit-6 {
  margin-top: 4px;
}

.circuit-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  color: #212933;
  padding: 8px 32px 8px 12px;
  max-height: 42px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 16px;
  line-height: 24px;
}

.circuit-0:focus,
.circuit-0:hover,
.circuit-0:active {
  outline: none;
}

.circuit-0:focus {
  border-color: #3388FF;
}

.circuit-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-2 {
  color: #5C656F;
  display: block;
  z-index: 40;
  pointer-events: none;
  position: absolute;
  height: 24px;
  width: 24px;
  top: 1px;
  right: 1px;
  margin: 8px;
}

.circuit-4 {
  display: inline-block;
  width: auto;
  max-width: 280px;
  min-width: 120px;
  background-color: #212933;
  color: #FFFFFF;
  border-radius: 4px;
  padding: 8px 12px;
  position: absolute;
  z-index: 31;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 13px;
  line-height: 20px;
  box-shadow: 0 0 0 1px rgba(12,15,20,0.02), 0 0 1px 0 rgba(12,15,20,0.06), 0 2px 2px 0 rgba(12,15,20,0.06);
  right: 50%;
  right: calc(50% - (16px + 4px));
  bottom: 100%;
  bottom: calc(100% + 12px);
  right: 1px;
}

.circuit-4::after {
  display: block;
  content: '';
  width: 0;
  height: 0;
  position: absolute;
  border: 8px solid transparent;
}

.circuit-4::after {
  right: 12px;
}

.circuit-4::after {
  top: 100%;
  border-top-color: #212933;
}

<label
  class="circuit-8 circuit-9"
  for="select_7"
>
  <div
    class="circuit-6 circuit-7"
  >
    <select
      class="circuit-0 circuit-1"
      id="select_7"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-2 circuit-3"
      fill="none"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 9l3-3 3 3m-6 6l3 3 3-3"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <div
      class="circuit-4 circuit-5"
    >
      This field is required.
    </div>
  </div>
</label>
`;

exports[`Select should render with default styles 1`] = `
.circuit-6 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-4 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-4,
label + .circuit-4 {
  margin-top: 4px;
}

.circuit-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  color: #212933;
  padding: 8px 32px 8px 12px;
  max-height: 42px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 16px;
  line-height: 24px;
}

.circuit-0:focus,
.circuit-0:hover,
.circuit-0:active {
  outline: none;
}

.circuit-0:focus {
  border-color: #3388FF;
}

.circuit-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-2 {
  color: #5C656F;
  display: block;
  z-index: 40;
  pointer-events: none;
  position: absolute;
  height: 24px;
  width: 24px;
  top: 1px;
  right: 1px;
  margin: 8px;
}

<label
  class="circuit-6 circuit-7"
  for="select_1"
>
  <div
    class="circuit-4 circuit-5"
  >
    <select
      class="circuit-0 circuit-1"
      id="select_1"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-2 circuit-3"
      fill="none"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 9l3-3 3 3m-6 6l3 3 3-3"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
</label>
`;

exports[`Select should render with disabled styles when passed the disabled prop 1`] = `
.circuit-6 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  color: #212933;
  padding: 8px 32px 8px 12px;
  max-height: 42px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 16px;
  line-height: 24px;
}

.circuit-0:focus,
.circuit-0:hover,
.circuit-0:active {
  outline: none;
}

.circuit-0:focus {
  border-color: #3388FF;
}

.circuit-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-2 {
  color: #5C656F;
  display: block;
  z-index: 40;
  pointer-events: none;
  position: absolute;
  height: 24px;
  width: 24px;
  top: 1px;
  right: 1px;
  margin: 8px;
}

.circuit-4 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

label > .circuit-4,
label + .circuit-4 {
  margin-top: 4px;
}

<label
  class="circuit-6 circuit-7"
  for="select_2"
>
  <div
    class="circuit-4 circuit-5"
    disabled=""
  >
    <select
      class="circuit-0 circuit-1"
      disabled=""
      id="select_2"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-2 circuit-3"
      fill="none"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 9l3-3 3 3m-6 6l3 3 3-3"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
</label>
`;

exports[`Select should render with inline styles when passed the inline prop 1`] = `
.circuit-6 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  color: #212933;
  padding: 8px 32px 8px 12px;
  max-height: 42px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 16px;
  line-height: 24px;
}

.circuit-0:focus,
.circuit-0:hover,
.circuit-0:active {
  outline: none;
}

.circuit-0:focus {
  border-color: #3388FF;
}

.circuit-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-2 {
  color: #5C656F;
  display: block;
  z-index: 40;
  pointer-events: none;
  position: absolute;
  height: 24px;
  width: 24px;
  top: 1px;
  right: 1px;
  margin: 8px;
}

.circuit-4 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
  display: inline-block;
  margin-right: 16px;
}

label > .circuit-4,
label + .circuit-4 {
  margin-top: 4px;
}

<label
  class="circuit-6 circuit-7"
  for="select_5"
>
  <div
    class="circuit-4 circuit-5"
  >
    <select
      class="circuit-0 circuit-1"
      id="select_5"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-2 circuit-3"
      fill="none"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 9l3-3 3 3m-6 6l3 3 3-3"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
</label>
`;

exports[`Select should render with invalid styles when passed the invalid prop 1`] = `
.circuit-8 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-6 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-6,
label + .circuit-6 {
  margin-top: 4px;
}

.circuit-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  color: #212933;
  padding: 8px 32px 8px 12px;
  max-height: 42px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 16px;
  line-height: 24px;
  border-color: #EA7A7A;
  padding-right: 56px;
}

.circuit-0:focus,
.circuit-0:hover,
.circuit-0:active {
  outline: none;
}

.circuit-0:focus {
  border-color: #3388FF;
}

.circuit-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-2 {
  color: #5C656F;
  display: block;
  z-index: 40;
  pointer-events: none;
  position: absolute;
  height: 24px;
  width: 24px;
  top: 1px;
  right: 1px;
  margin: 8px;
  right: calc(1px + 24px);
}

.circuit-4 {
  color: #5C656F;
  display: block;
  z-index: 40;
  pointer-events: none;
  position: absolute;
  height: 24px;
  width: 24px;
  top: 1px;
  right: 1px;
  margin: 8px;
  color: #DB4D4D;
}

<label
  class="circuit-8 circuit-9"
  for="select_3"
>
  <div
    class="circuit-6 circuit-7"
  >
    <select
      class="circuit-0 circuit-1"
      id="select_3"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-2 circuit-3"
      fill="none"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 9l3-3 3 3m-6 6l3 3 3-3"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <svg
      class="circuit-4 circuit-5"
      fill="none"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9.5 14.5l5-5m-5 0l5 5M12 19a7 7 0 100-14 7 7 0 000 14z"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
</label>
`;

exports[`Select should render with no margin styles when passed the noMargin prop 1`] = `
.circuit-6 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  color: #212933;
  padding: 8px 32px 8px 12px;
  max-height: 42px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 16px;
  line-height: 24px;
}

.circuit-0:focus,
.circuit-0:hover,
.circuit-0:active {
  outline: none;
}

.circuit-0:focus {
  border-color: #3388FF;
}

.circuit-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-2 {
  color: #5C656F;
  display: block;
  z-index: 40;
  pointer-events: none;
  position: absolute;
  height: 24px;
  width: 24px;
  top: 1px;
  right: 1px;
  margin: 8px;
}

.circuit-4 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
  margin-bottom: 0;
}

label > .circuit-4,
label + .circuit-4 {
  margin-top: 4px;
}

<label
  class="circuit-6 circuit-7"
  for="select_6"
>
  <div
    class="circuit-4 circuit-5"
  >
    <select
      class="circuit-0 circuit-1"
      id="select_6"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-2 circuit-3"
      fill="none"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 9l3-3 3 3m-6 6l3 3 3-3"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
</label>
`;
